# Verdura

./: CMakeLists.txt  main.cpp  readme.md
Engine/: Game.h  roadmap.md
Engine/Camera/: Camera.cpp  Camera.h
Engine/Common/: Game.h  math_helper.h
Engine/Events/: EventDispatcher.h  EventManager.h
Engine/Light/AmbientLight/: AmbientLight.cpp  AmbientLight.h
Engine/Light/BaseLight/: BaseLight.cpp  BaseLight.h
Engine/Light/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.h
Engine/Mesh/: AssimpFbxLoader.h  AssimpFbxMesh.h  Mesh.cpp  Mesh.h  MeshCache.h  MeshLoader.h  OBJLoader.h  OBJMesh.h  OBJMeshFlyWeight.h
Engine/ParticleEffect/: ParticleManager.h  ParticleMovement.h
Engine/Physics/: Movement.h
Engine/Renderer/: Renderer.h
Engine/Shader/: fragment.txt  program.h  shader.h  vertex.txt
Engine/ShaderManager/: ShaderManager.cpp  ShaderManager.h
Engine/Sound/: SoundManager.h
Engine/Texture/: Texture.cpp  Texture.h
Engine/VAO/: VAO.cpp  VAO.h
Engine/VBO/: VBO.cpp  VBO.h
GLBHandlers/GLBLoader/: glb_loader.h
GLBHandlers/GLBMesh/: GLBMesh.cpp  GLBMesh.h
GLBLoader/: glb_loader.h
Game/: Ability.h  Attack.cpp  Attack.h  Character.h  Dialog.cpp  Dialog.h  Enemy.h  GameUI.cpp  GameUI.h  Inventory.h  Item.cpp  Item.h  Leveling.cpp  Leveling.h  Shop.cpp  Shop.h
Game/Ability/: Ability.cpp  Ability.h  Attack.h  BouclierStrategy.cpp  BouclierStrategy.h  DamageReductionStrategy.cpp  DamageReductionStrategy.h  DefenseStrategy.cpp  DefenseStrategy.h  RetourALEnvoyeurStrategy.cpp  RetourALEnvoyeurStrategy.h
Game/Assets/Characters/: goblin.glb
Game/Character/: Character.cpp  Character.h  CharacterMovement.cpp  CharacterMovement.h  DamageManager.cpp  DamageManager.h  Enemy.cpp  Enemy.h  Hero.cpp  Hero.h  Leveling.cpp  Leveling.h  Stats.cpp  Stats.h  WarriorClass.cpp  WarriorClass.h
Game/Events/: GameEndEvent.h  HitEvent.h  LevelingEvent.h  SoundRequestEvent.h  UIInterruptEvent.h  UseOrBuyItemEvent.h
Game/Game/: GameImpl.cpp  GameImpl.h
Game/Inventory/: Inventory.cpp  Inventory.h  Item.h  Shop.h
Game/Shaders/: fragment.txt  fragment2.txt  fragment_fire_ice_particle.txt  vertex.txt  vertex2.txt  vertex_character.txt  vertex_fire_ice_particle.txt
Game/UI/: GameUI.cpp  GameUI.h
Helpers/: data_types.h
assets/: vertex_character.txt  vertex_fire_ice_particle.txt
assets/Knight/: material.lib
dependencies_code/: glad.c  imgui_image_loader_opengl.h  stb.cpp
inc/: error_codes.h
inc/glad/: glad.h
